--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
+    "react-loader-spinner": "^8.0.0",
     "react-router": "^7.10.1",
     "react-type-animation": "^3.2.0",
     "sweetalert2": "^11.26.10",
