--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.18",
+    "aos": "^2.3.4",
     "axios": "^1.13.2",
     "daisyui": "^5.5.14",
     "firebase": "^12.6.0",
@@ -19,6 +20,7 @@
     "ogl": "^1.0.11",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
     "react-loader-spinner": "^8.0.0",
